--- a/src/config.example.yml
+++ b/src/config.example.yml
@@ -1,37 +1,38 @@
 ---
-  TRADE_OPTIONS:
-    # QUANTITY and PAIRING determine how much of your wallet value will be used to buy the new token.
-    # 'QUANTITY: 15' and 'PAIRING: USDT' means you will spend 15 USDT to buy XXX_USDT where XXX is the new token.
-    KUCOIN_ANNOUNCEMENTS: False
-    QUANTITY: 15
-    PAIRING: USDT
-    # Test mode. No real money will be used.
-    TEST: True
-    # Stop Loss in % of your buy value.
-    SL: -3
-    # Take Profit in % of your buy value.
-    TP: 2
-    # DO NOT DISABLE TSL!!!! YOUR BOT WILL NOT SELL
-    ENABLE_TSL: True
-    # Trailing Stop Loss
-    TSL: -4
-    # Trailing Take Profit
-    TTP: 2
-  LOGGING:
-    # Logging levels used in this program are ERROR, INFO, and DEBUG
-    LOG_LEVEL: INFO
-    LOG_FILE: bot.log
-    LOG_TO_CONSOLE: True
-  TELEGRAM:
-    # set to True to enable telegram notifications
-    ENABLED: False
-    # Disable / Enable specific notifications
-    NOTIFICATIONS:
-      STARTUP: True # welcome message
-      COIN_ANNOUNCEMENT: True # detected new announcement
-      COIN_NOT_SUPPORTED: True # coin is not on gate.io
-      BUY_START: True # when entering position
-      BUY_ORDER_CREATED: True # when buy order is created
-      BUY_FILLED: True # when the buy order got filled
-      SELL_START: True # when starting to sell      
-      SELL_FILLED: True # when sold
+TRADE_OPTIONS:
+  # QUANTITY and PAIRING determine how much of your wallet value will be used to buy the new token.
+  # 'QUANTITY: 15' and 'PAIRING: USDT' means you will spend 15 USDT to buy XXX_USDT where XXX is the new token.
+  KUCOIN_ANNOUNCEMENTS: False
+  QUANTITY: 15
+  PAIRING: USDT
+  # Test mode. No real money will be used.
+  TEST: True
+  # Stop Loss in % of your buy value.
+  SL: -3
+  # Take Profit in % of your buy value.
+  TP: 2
+  # DO NOT DISABLE TSL!!!! YOUR BOT WILL NOT SELL
+  ENABLE_TSL: True
+  # Trailing Stop Loss
+  TSL: -4
+  # Trailing Take Profit
+  TTP: 2
+LOGGING:
+  # Logging levels used in this program are ERROR, INFO, and DEBUG
+  LOG_LEVEL: INFO
+  LOG_FILE: bot.log
+  LOG_TO_CONSOLE: True
+TELEGRAM:
+  # set to True to enable telegram notifications
+  ENABLED: False
+  # Disable / Enable specific notifications
+  NOTIFICATIONS:
+    START_WORKING: True # welcome message
+    STOPPED_WORKING: True # Stopped Working Message
+    COIN_ANNOUNCEMENT: True # detected new announcement
+    COIN_NOT_SUPPORTED: True # coin is not on gate.io
+    BUY_START: True # when entering position
+    BUY_ORDER_CREATED: True # when buy order is created
+    BUY_FILLED: True # when the buy order got filled
+    SELL_START: True # when starting to sell
+    SELL_FILLED: True # when sold
