Add new packages to setup.cfg + update requirements + bump pytest-cov to 3.0.0

--- a/setup.cfg
+++ b/setup.cfg
@@ -14,6 +14,9 @@ install_requires =
 packages =
     gateio_new_coins_announcements_bot
     gateio_new_coins_announcements_bot.auth
+    gateio_new_coins_announcements_bot.util
+    gateio_new_coins_announcements_bot.announcement_scrapers
+
 python_requires = >=3.8
 package_dir =
     =src
